<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pinscription"
    tools:context=".Inscription">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="23dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/ins_prenom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/ins_prenom"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="21dp"
        android:background="@drawable/radius_shape"
        android:elevation="30dp"
        android:ems="10"
        android:hint="@string/prenom"
        android:autofillHints="@string/prenom"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/ins_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ins_nom"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/ins_num"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/radius_shape"
        android:elevation="30dp"
        android:ems="10"
        android:hint="@string/num"
        android:autofillHints="@string/num"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/ins_numc"
        app:layout_constraintStart_toStartOf="@+id/ins_email"
        app:layout_constraintTop_toBottomOf="@+id/ins_email" />

    <EditText
        android:id="@+id/ins_nom"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/radius_shape"
        android:elevation="30dp"
        android:ems="10"
        android:hint="@string/nom"
        android:autofillHints="@string/nom"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/ins_prenom"
        app:layout_constraintEnd_toStartOf="@+id/ins_prenom"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="179dp"
        android:background="@drawable/radius_shape"
        android:elevation="30dp"
        android:text="@string/goback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/validate"
        app:layout_constraintTop_toBottomOf="@+id/ins_numc" />

    <EditText
        android:id="@+id/ins_email"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/radius_shape"
        android:elevation="30dp"
        android:ems="10"
        android:hint="@string/email"
        android:autofillHints="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/ins_num"
        app:layout_constraintStart_toStartOf="@+id/ins_nom"
        app:layout_constraintTop_toBottomOf="@+id/ins_prenom" />

    <Button
        android:id="@+id/validate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/radius_shape"
        android:elevation="30dp"
        android:text="@string/validate"
        app:layout_constraintBaseline_toBaselineOf="@+id/back"
        app:layout_constraintEnd_toStartOf="@+id/back"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ins_numc"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/radius_shape"
        android:elevation="30dp"
        android:ems="10"
        android:hint="@string/cmdp"
        android:autofillHints="@string/cmdp"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/back"
        app:layout_constraintStart_toStartOf="@+id/validate"
        app:layout_constraintTop_toBottomOf="@+id/ins_num" />

</android.support.constraint.ConstraintLayout>