<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paddcontact">

    <EditText
        android:id="@+id/cnom"
        android:layout_width="210dp"
        android:layout_height="0dp"
        android:layout_marginTop="121dp"
        android:layout_marginBottom="19dp"
        android:background="@color/white_transp"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/nom"
        android:autofillHints="@string/nom"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/cprenom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cemail"
        android:layout_width="210dp"
        android:layout_height="0dp"
        android:layout_marginBottom="36dp"
        android:background="@color/white_transp"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:autofillHints="@string/email"
        android:inputType="textPersonName|textEmailAddress"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/addcontact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cprenom" />

    <EditText
        android:id="@+id/cprenom"
        android:layout_width="210dp"
        android:layout_height="0dp"
        android:layout_marginBottom="21dp"
        android:background="@color/white_transp"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/prenom"
        android:autofillHints="@string/prenom"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/cemail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cnom" />

    <Button
        android:id="@+id/addcontact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="342dp"
        android:background="@drawable/radius_shape"
        android:elevation="10dp"
        android:text="@string/addcontact"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cemail" />

</android.support.constraint.ConstraintLayout>